qthread for reduce lag

--- a/Makefile.Debug
+++ b/Makefile.Debug
@@ -273,6 +273,8 @@ debug\moc_mainwindow.cpp: mainwindow.h \
 		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtGui\qicon.h \
 		rtspstreamer.h \
 		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\QObject \
+		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\QThread \
+		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\qthread.h \
 		..\..\..\..\gstreamer\1.0\msvc_x86_64\include\gstreamer-1.0\gst\gst.h \
 		..\..\..\..\gstreamer\1.0\msvc_x86_64\include\glib-2.0\glib.h \
 		..\..\..\..\gstreamer\1.0\msvc_x86_64\include\glib-2.0\glib\galloca.h \
@@ -738,6 +740,8 @@ debug\moc_rtspstreamer.cpp: rtspstreamer.h \
 		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\qvarlengtharray.h \
 		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\qcontainerfwd.h \
 		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\qobject_impl.h \
+		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\QThread \
+		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\qthread.h \
 		..\..\..\..\gstreamer\1.0\msvc_x86_64\include\gstreamer-1.0\gst\gst.h \
 		..\..\..\..\gstreamer\1.0\msvc_x86_64\include\glib-2.0\glib.h \
 		..\..\..\..\gstreamer\1.0\msvc_x86_64\include\glib-2.0\glib\galloca.h \
@@ -1277,6 +1281,8 @@ debug\main.obj: main.cpp mainwindow.h \
 		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtGui\qicon.h \
 		rtspstreamer.h \
 		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\QObject \
+		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\QThread \
+		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\qthread.h \
 		..\..\..\..\gstreamer\1.0\msvc_x86_64\include\gstreamer-1.0\gst\gst.h \
 		..\..\..\..\gstreamer\1.0\msvc_x86_64\include\glib-2.0\glib.h \
 		..\..\..\..\gstreamer\1.0\msvc_x86_64\include\glib-2.0\glib\galloca.h \
@@ -1802,6 +1808,8 @@ debug\mainwindow.obj: mainwindow.cpp mainwindow.h \
 		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtGui\qicon.h \
 		rtspstreamer.h \
 		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\QObject \
+		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\QThread \
+		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\qthread.h \
 		..\..\..\..\gstreamer\1.0\msvc_x86_64\include\gstreamer-1.0\gst\gst.h \
 		..\..\..\..\gstreamer\1.0\msvc_x86_64\include\glib-2.0\glib.h \
 		..\..\..\..\gstreamer\1.0\msvc_x86_64\include\glib-2.0\glib\galloca.h \
@@ -2266,6 +2274,8 @@ debug\rtspstreamer.obj: rtspstreamer.cpp rtspstreamer.h \
 		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\qvarlengtharray.h \
 		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\qcontainerfwd.h \
 		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\qobject_impl.h \
+		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\QThread \
+		..\..\..\..\Qt\Qt5.14.2\5.14.2\msvc2017_64\include\QtCore\qthread.h \
 		..\..\..\..\gstreamer\1.0\msvc_x86_64\include\gstreamer-1.0\gst\gst.h \
 		..\..\..\..\gstreamer\1.0\msvc_x86_64\include\glib-2.0\glib.h \
 		..\..\..\..\gstreamer\1.0\msvc_x86_64\include\glib-2.0\glib\galloca.h \
